Bug 376741 - Long debuggee strings break summary page
Summary: Long debuggee strings break summary page
Status: RESOLVED FIXED
Alias: None
Product: Heaptrack
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Compiled Sources Linux
: NOR minor
Target Milestone: ---
Assignee: Milian Wolff
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-02-20 22:40 UTC by Bastian Beischer
Modified: 2017-02-21 09:23 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Bastian Beischer 2017-02-20 22:40:31 UTC
In case the debuggee command line was very long the GUI expands in width to meet the space requirements of the long debuggee string. It can't be shrinked either.

This wouldn't be too bad, but it get's problematic when the string is really long, then parts of the GUI don't fit on the screen and this can't be solved.
Comment 1 Milian Wolff 2017-02-21 08:42:11 UTC
Git commit dca3b138cd2d3d091f588528cfee38a78d91b4b2 by Milian Wolff.
Committed on 21/02/2017 at 08:42.
Pushed by mwolff into branch '1.0'.

Enable wordwrap in summary labels

When we encounter long debuggee command lines, we used to put them
into one line. This increased the minimal width of the mainwindow,
which could even expand beyond the screen dimensions, making parts
of the window invisible.

By enabling wordwrap, we can break the command line after every
argument. Additionally, to cope with extremely long arguments,
we add zero-width spaces after every 50 word characters, to enable
word wrap at these places.

M  +10   -2    src/analyze/gui/mainwindow.cpp
M  +6    -0    src/analyze/gui/mainwindow.ui

https://commits.kde.org/heaptrack/dca3b138cd2d3d091f588528cfee38a78d91b4b2
Comment 2 Bastian Beischer 2017-02-21 09:23:38 UTC
Thanks, the fix you pushed works well for me.